--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="120dp"
+        android:layout_width="225dp"
+        android:layout_height="180dp"
+        android:layout_gravity="center"
         android:id="@+id/imgFoto"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_marginLeft="10dp">
 
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/hueso"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -20,32 +27,31 @@
             android:textSize="20dp"
             android:textStyle="bold"
             />
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="10dp"
-            android:src="@drawable/hueso"
-            />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Me gusta"
-            android:textSize="15dp"
+           android:text="                                      "
+            android:textSize="20dp"
             android:textStyle="bold"
+            android:layout_gravity="right"
             />
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/huesito"
-            />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvRating"
             android:textSize="20dp"
             android:textStyle="bold"
+            android:layout_gravity="right"
             />
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/huesito"
+            android:layout_gravity="right"
+            />
+
+
     </LinearLayout>
 
 </LinearLayout>
