--- a/app/src/main/res/layout/rating_card.xml
+++ b/app/src/main/res/layout/rating_card.xml
@@ -9,17 +9,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="70dp"
-            android:id="@+id/imgFoto"/>
+            android:layout_width="140dp"
+            android:layout_height="100dp"
+            android:id="@+id/imgFoto"
+            android:layout_gravity="center"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_marginLeft="10dp">
 
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/hueso"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -27,17 +33,20 @@
             android:textSize="20dp"
             android:textStyle="bold"
             />
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="10dp"
-            android:src="@drawable/hueso"
-            />
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Me gusta"
+            android:text="                                                           "
             android:textSize="15dp"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvRating"
+            android:textSize="20dp"
             android:textStyle="bold"
             />
         <ImageView
@@ -46,13 +55,7 @@
             android:src="@drawable/huesito"
             />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvRating"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            />
+
     </LinearLayout>
 
     </LinearLayout>
